[package]
name = "gon"
version = "0.1.0"
edition = "2024"

[features]
json = ["dep:serde_json"]
preserve_order = ["dep:indexmap"]

[dependencies]
klex = { git = "https://www.github.com/***REMOVED***/klex", branch = "main" }
thiserror = "2.0.12"
serde_json = { version = "1.0", optional = true }
indexmap = { version = "2.7", optional = true }
